--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="Portfolio.css">
 		<title> Akhila Narayan </title>
 		<meta charset="UTF-8">
-		<link rel="shortcut icon" href="akhila.jpg" />
+		<link rel="shortcut icon" href="akhila.png" />
 
 		<!-- SCROLLING USING NAVIGATION JS -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -95,7 +95,7 @@
 
 			<!-- ABOUT PAGE -->
 			<div id="about">
-				<p id="aboutinfo"> My name is Akhila Narayan and I am a Junior at Rutgers University majoring  <img src="akhila.jpg" width="275" height="275" align="right"> in Computer Science and minoring in Economics. I find ways to express myself using music, art, and my computer. Whether I am playing the piano, doodling on scraps of paper, or typing away on the computer, I am always on the go, trying to think of creative alternatives for the problems that life throws at me. With my diverse range of interest and experiences, I hope to one day contribute to a groundbreaking form of technology. </p>
+				<p id="aboutinfo"> My name is Akhila Narayan and I am a Junior at Rutgers University majoring  <img src="akhila.png" width="275" height="275" align="right"> in Computer Science and minoring in Economics. I find ways to express myself using music, art, and my computer. Whether I am playing the piano, doodling on scraps of paper, or typing away on the computer, I am always on the go, trying to think of creative alternatives for the problems that life throws at me. With my diverse range of interest and experiences, I hope to one day contribute to a groundbreaking form of technology. </p>
 				
 				<p style="font-family: avenir; font-size: 125%; margin-left: 15%" > <i>“It does not do to dwell on dreams and forget to live.”</i> <br>- J.K. Rowling, Harry Potter and the Sorcerer's Stone </p>
 
